# LDI

./: .gitignore  Notes.md  README.md
BeamProfiler/: Beam tests.pdn  app.js  cam.py  cam3.py  index.html
Boxer/: Assembly-CSharp.csproj  Boxer.sln
Camera Sim/: .gitignore  Assembly-CSharp.csproj  Camera Sim.sln
CloudTools/: dwag_clipped.ply  modelRightHand.stl  modelTail.stl  modelTailPiece.stl  quad_derg.ply  reg.py  reg_warp.py  register - Copy.py  register.py
GalvoDriver/: DT document 2018-3 (1).rar
Hawk/: hawk.py
Hawk/primary/: CMakeLists.txt  LibCamera.cpp  camera.cpp  lz4.h  main.cpp  network.cpp  network.h  notes  start_trigger.sh
Mover/: mover.js
NativeCore/: .gitignore  NativeCore.cpp  NativeCore.sln  NativeCore.vcxproj  NativeCore.vcxproj.filters
PyBA/: ba.py  ba_example.py  ba_initial.py  ba_input.txt  ba_multi_cam_intrins.py  ba_new.py  ba_result.txt  ba_single_cam_intrins.py  ba_stereo.py  ba_stereo_cv_cam.py  new_ba_input.txt  new_ba_input_0.txt  new_ba_output.txt  new_ba_output_0.txt
SamplerTest/: .gitignore  SamplerTest.cpp  SamplerTest.sln  SamplerTest.vcxproj  SamplerTest.vcxproj.filters
Wyvern/: .gitignore  Assembly-CSharp.csproj  NewAssembly.csproj  Wyvern.sln
WyvernDX11/: .gitignore  README.md  WyvernDX11.sln  WyvernDX11.vcxproj  WyvernDX11.vcxproj.filters  oss licenses.txt
cnc/: 1001.nc  acetal_adap_square.nc  acetal_bore_contour.nc  acetal_chamfer.nc  acetal_contour1.nc  acetal_face_n50um.nc  acetal_pocket1.nc  afr2_adap1.nc  afr2_adap2.nc  afr2_face.nc  afr2_finishing.nc  afr_ball.nc  afr_rough1.nc  afr_rough2.nc  (+15 more)
(+427 files in other folders)
